// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GifFinder should snapshot 1`] = `
<div>
  <section>
    <label>
      find a gif
      <input
        placeholder="query"
        value=""
      />
    </label>
  </section>
</div>
`;

exports[`GifFinder when searching should render the gifs 1`] = `
<div>
  <section>
    <label>
      find a gif
      <input
        placeholder="query"
        value="react"
      />
    </label>
    <div
      class="grid"
    >
      <button
        aria-label="gif"
        class="button"
        type="button"
      >
        <img
          alt="gif"
          class="image"
          src="gif1"
        />
      </button>
      <button
        aria-label="gif"
        class="button"
        type="button"
      >
        <img
          alt="gif"
          class="image"
          src="gif2"
        />
      </button>
      <button
        aria-label="gif"
        class="button"
        type="button"
      >
        <img
          alt="gif"
          class="image"
          src="gif3"
        />
      </button>
    </div>
  </section>
</div>
`;
